[package]
name = "rustbuster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = {version = "4.0.17", features = ["env", "derive"]}
indicatif = "0.17.1"
owo-colors = "3.5.0"
reqwest = "0.11.12"
snafu = "0.7.3"
strum = {version ="0.24.1", features = ["derive"]}
strum_macros = "0.24.1"
thiserror = "1.0.37"
tokio = {version = "1.21.2", features = ["full"] }
